--- a/metacontroller/concourse-team-controller/concourse-team-controller-cm.yaml
+++ b/metacontroller/concourse-team-controller/concourse-team-controller-cm.yaml
@@ -21,7 +21,7 @@ data:
         if not teamurl:
           teamName = object['spec']['name']
           print("No team URL found, creating")
-          fly = subprocess.Popen(["/fly-dir/fly", "-t", "concourse", "set-team", "-n", teamName, "--non-interactive", "--local-user", os.environ["CONCOURSE_USERNAME"].replace("\n", '')], stdout=subprocess.PIPE, stderr=subprocess.STDOUT)
+          fly = subprocess.Popen(["sh","/fly-dir/fly", "-t", "concourse", "set-team", "-n", teamName, "--non-interactive", "--local-user", os.environ["CONCOURSE_USERNAME"].replace("\n", '')], stdout=subprocess.PIPE, stderr=subprocess.STDOUT)
           flyOutput,_ = fly.communicate()
           returnCode = fly.wait()
           print("Got process code {} from fly with output: {} ", returnCode, flyOutput)
@@ -43,7 +43,7 @@ data:
         else:
           print("Attempting delete of team %s" % teamName)
 
-          fly = subprocess.Popen(["/fly-dir/fly", "-t", "concourse", "destroy-team", "-n", teamName, "--non-interactive"], stdout=subprocess.PIPE, stderr=subprocess.STDOUT)
+          fly = subprocess.Popen(["sh","/fly-dir/fly", "-t", "concourse", "destroy-team", "-n", teamName, "--non-interactive"], stdout=subprocess.PIPE, stderr=subprocess.STDOUT)
           flyOutput,_ = fly.communicate()
           returnCode = fly.wait()
           print("Got process code {} from fly with output: {} ".format(returnCode, flyOutput))
@@ -78,7 +78,7 @@ data:
     
     concourseUrl=os.environ["CONCOURSE_URL"]
     print("Logging into {}".format(concourseUrl))
-    flyLoginCmd = subprocess.Popen(["/fly-dir/fly", "-t", "concourse", "login", "-c", os.environ["CONCOURSE_URL"].replace("\n", ''), "-u", os.environ["CONCOURSE_USERNAME"].replace("\n", ''), "-p", os.environ["CONCOURSE_PASSWORD"].replace("\n", ''), "-n", "main"], stdout=subprocess.PIPE, stderr=subprocess.STDOUT)
+    flyLoginCmd = subprocess.Popen(["sh","/fly-dir/fly", "-t", "concourse", "login", "-c", os.environ["CONCOURSE_URL"].replace("\n", ''), "-u", os.environ["CONCOURSE_USERNAME"].replace("\n", ''), "-p", os.environ["CONCOURSE_PASSWORD"].replace("\n", ''), "-n", "main"], stdout=subprocess.PIPE, stderr=subprocess.STDOUT)
     flyLoginOutput,_ = flyLoginCmd.communicate()
     flyLoginReturnCode = flyLoginCmd.wait()
     print("Got process code {} from fly with output: {} ".format(flyLoginReturnCode, flyLoginOutput))
