--- a/metacontroller/argocd-project-controller/webhook.yaml
+++ b/metacontroller/argocd-project-controller/webhook.yaml
@@ -60,6 +60,8 @@ spec:
             secretKeyRef:
               name: controller-secrets
               key: argocd_host
+        - name: "PYTHONHTTPSVERIFY"
+          value: "0"
       volumes:
       - name: hooks
         configMap:
