--- a/home/pipeline/spring-petclinic.yaml
+++ b/home/pipeline/spring-petclinic.yaml
@@ -32,6 +32,7 @@ jobs:
           source:
             repository: ((common-secrets.harborDomain))/dockerhub/library/adoptopenjdk
             tag: 11-jdk-hotspot
+            insecure_registries: [ "((common-secrets.harborDomain))" ]
         inputs:
           - name: source-code
         outputs:
