--- a/home/pipeline/spring-petclinic.yaml
+++ b/home/pipeline/spring-petclinic.yaml
@@ -28,7 +28,7 @@ jobs:
       config:
         platform: linux
         image_resource:
-          type: registry-image
+          type: docker-image
           source:
             repository: ((common-secrets.harborDomain))/tanzu-e2e/adoptopenjdk
             insecure_registries: [((common-secrets.harborDomain))]
