--- a/home/pipeline/spring-petclinic.yaml
+++ b/home/pipeline/spring-petclinic.yaml
@@ -90,6 +90,7 @@ jobs:
         image_resource:
           type: docker-image
           source:
+            insecure_registries: [((common-secrets.harborDomain))]
             repository: ((common-secrets.concourseHelperImage))
             tag: latest
         inputs:
