--- a/home/pipeline/spring-petclinic.yaml
+++ b/home/pipeline/spring-petclinic.yaml
@@ -116,7 +116,7 @@ jobs:
               else
                 kp image create spring-petclinic \
                   --tag ((petclinic.image)) \
-                  --cluster-builder demo-cluster-builder \
+                  --cluster-builder default \
                   --namespace ((petclinic.tbsNamespace)) \
                   --local-path target/spring-petclinic-2.3.0.BUILD-SNAPSHOT.jar \
                   --wait
