typo in pipeline

--- a/home/pipeline/spring-petclinic.yaml
+++ b/home/pipeline/spring-petclinic.yaml
@@ -109,7 +109,7 @@ jobs:
               exists=$?
               set -e
               if [ $exists -eq 0 ]; then
-                kp image patch spring-petclinic \kp
+                kp image patch spring-petclinic \
                   --namespace ((petclinic.tbsNamespace)) \
                   --local-path target/spring-petclinic-2.3.0.BUILD-SNAPSHOT.jar \
                   --wait
@@ -121,9 +121,6 @@ jobs:
                   --local-path target/spring-petclinic-2.3.0.BUILD-SNAPSHOT.jar \
                   --wait
               fi
-              sleep 120
-
-
 - name: continuous-deployment
   public: true
   serial: true
